; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_ls-files.c_write_name.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_ls-files.c_write_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@prefix_len = common dso_local global i64 0, align 8
@prefix = common dso_local global i32* null, align 8
@stdout = common dso_local global i32 0, align 4
@line_terminator = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @write_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_name(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = load i64, i64* @prefix_len, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32*, i32** @prefix, align 8
  br label %9

8:                                                ; preds = %1
  br label %9

9:                                                ; preds = %8, %6
  %10 = phi i32* [ %7, %6 ], [ null, %8 ]
  %11 = load i32, i32* @stdout, align 4
  %12 = load i32, i32* @line_terminator, align 4
  %13 = call i32 @write_name_quoted_relative(i8* %3, i32* %10, i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @write_name_quoted_relative(i8*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
